# Spatic_assignment

./: Result_assignment.csv  Spatic_assignment_code.py  main.py  pyproject.toml
