[tool.poetry]
name = "spatic-assignment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "spatic_assignment"}]

[tool.poetry.dependencies]
python = "^3.11"
geopy = "^2.3.0"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
